TestSuite/errors/err0528_invalid_path.pas
//!Путь к сборке содержит недопустимые символы
{$reference ':*?"<>|'}
begin
  
end.